# pytorch-1h

./: PROJECT_SUMMARY.md  README.md  ddp_training.py  main.py  make_executable.sh  mypy.ini  pyproject.toml
gcp/: README.md  cleanup.sh  connect.sh  cost_monitor.sh  upload.sh  verify_setup.sh
gcp/multi-gpu/: README.md  gcp_setup_multi.sh
gcp/single-gpu/: README.md  connect_single.sh  gcp_setup.sh  upload_single.sh
